--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 ~$*.SLDPRT
 ~$*.SLDASM
 ToDo.txt
+DataCable/DataCableBoard/DataCableBoard/History/*
+DataCable/DataCableBoard/DataCableBoard/__Previews/*
+DataCable/DataCableBoard/DataCableBoard/Project Logs for DataCableBoard/*
