--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ ToDo.txt
 DataCable/DataCableBoard/DataCableBoard/History/*
 DataCable/DataCableBoard/DataCableBoard/__Previews/*
 DataCable/DataCableBoard/DataCableBoard/Project Logs for DataCableBoard/*
+SFPCagePress/*
